--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <div class="profile-area">
             <!-- 1) 첫 번째 캐릭터 절대경로: '/Jun-s-Website/images/char1.png' -->
             <img id="profile-img"
-                 src="/Jun-s-Website/images/char1.png"
+                 src="/Jun-s-Website/images/pepe.jpg"
                  alt="Profile Image"
                  class="profile-img">
             <button type="button" id="char-dropdown-btn">&#9660;</button>
