--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
           <textarea 
             id="input-sentence" 
             class="comment-box" 
-            placeholder="Ex: I locked my keys in my car..." 
+            placeholder="Ex: I locked my keys in the car..." 
             required
           ></textarea>
 
